Closed
Bug 328676
Opened 20 years ago
Closed 20 years ago
FF (Cairo/Win32) do not start on 16 bpp display
Categories
(Core :: Graphics, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: volkmarkostka, Assigned: pavlov)
References
Details
(Whiteboard: cairo)
Attachments
(1 file)
594 bytes,
patch
|
vlad
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20060226 Firefox/1.6a1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20060226 Firefox/1.6a1
FF do not start at all or freezes if switching to 16 bit display.
No option works, neither safemode, nor profilemanager, nor new profile nor clean install. Works fine in 32 bit mode.
Reproducible: Always
Steps to Reproduce:
1. Set 16 bit color mode
2. Start FF
Actual Results:
FF do not start up. Sits there with 100% load. Profile seems to be read.
Expected Results:
FF starts normally.
ATI Rage Pro graphic card.
Similar bug: https://bugzilla.mozilla.org/show_bug.cgi?id=318423
Updated•20 years ago
|
Status: UNCONFIRMED → NEW
Component: General → GFX: Thebes
Ever confirmed: true
Product: Firefox → Core
Whiteboard: cairo
Version: unspecified → 1.0 Branch
Updated•20 years ago
|
Version: 1.0 Branch → Trunk
Comment 1•20 years ago
|
||
Note that 16-bit is the default colour depth for XP remote desktop :-/
Reporter | ||
Comment 2•20 years ago
|
||
Additional info:.
Works with 8 bit on ATI Rage Pro and ATI Radeon Mobility.
Does not work with 16 bit on ATI Radeon Mobility, and (reported: http://forums.mozillazine.org/viewtopic.php?t=386574&start=15 - pikaunforgiven) NVidia.
Comment 3•20 years ago
|
||
Dupe of Bug 328432 ?
Reporter | ||
Comment 4•20 years ago
|
||
Comment #3:
Not really a dupe.
Regarding comment #1 <a href="show_bug.cgi?id=328432" title="UNCONFIRMED - Cairo build doesn't display anything used over WinXP remote desktop">Bug 328432</a> seems to be the same problem but this bug reports the cause much better, i think.
*** Bug 328669 has been marked as a duplicate of this bug. ***
These assertions from bug 328669 result in this behavior:
###!!! ASSERTION: No DC: 'aDC', file
c:/work/mozilla/builds/ff/trunk/mozilla/gfx/thebes/src/gfxWindowsFonts.cpp,
line 459
cairo_win32_scaled_font_select_font:SelectObject: The handle is invalid.
###!!! ASSERTION: No DC: 'aDC', file
c:/work/mozilla/builds/ff/trunk/mozilla/gfx/thebes/src/gfxWindowsFonts.cpp,
line 555
cairo_win32_scaled_font_select_font:SelectObject: The handle is invalid.
Assignee | ||
Updated•20 years ago
|
Assignee: nobody → pavlov
Comment 7•20 years ago
|
||
This prevents testing of trunk builds on the Mozilla QA test farm Windows 2003 Servers since the only access to them is via RDP which is limited to 16bit.
Assignee | ||
Comment 8•20 years ago
|
||
Attachment #213826 -
Flags: review?(vladimir)
Attachment #213826 -
Flags: review?(vladimir) → review+
Assignee | ||
Updated•20 years ago
|
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 9•20 years ago
|
||
*** Bug 328432 has been marked as a duplicate of this bug. ***
Comment 10•20 years ago
|
||
verified on opt/dbg cvs builds on winxp when switching depth to 16bit. Thanks!
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•