fixing 16bpp display hang. bug 328676. r=vlad